--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -20,9 +20,9 @@ city_temps <- data.frame(name = city, temperature = temp)
 ```
 
 `@instructions`
-We are interested in specifying Celsius instead of Fahrenheit. Remember that to covert from Fahrenheit to Celsius we use $C = 5/9 \times (F-32)$.
+We are interested in specifying Celsius instead of Fahrenheit. Remember that to convert from Fahrenheit to Celsius we use $C = 5/9 \times (F-32)$.
 
-- Use vector arithmentics to convert `temp` to Celsius
+- Use vector arithmetics to convert `temp` to Celsius
 - Create a data frame called `city_temps` with the city names and temperatures in Celsius.
 
 `@hint`
@@ -41,7 +41,7 @@ city <- c("Beijing", "Lagos", "Paris", "Rio de Janeiro", "San Juan", "Toronto")
 # Store temperature values in `temp`
 temp <- c(35, 88, 42, 84, 81, 30)
 
-# Convert temperature into Celsius and restore in `temp`
+# Convert temperature into Celsius and overwrite the original values of 'temp' with these Celsius values
 
 # Create a data frame `city_temps` 
 
@@ -55,7 +55,7 @@ city <- c("Beijing", "Lagos", "Paris", "Rio de Janeiro", "San Juan", "Toronto")
 # Store temperature values in `temp`
 temp <- c(35, 88, 42, 84, 81, 30)
 
-# Convert temperature into Celsius and restore in `temp`
+# Convert temperature into Celsius and overwrite the original values of 'temp' with these Celsius values
 temp <- (temp - 32)*5/9
 
 # Create data frame `city_temps` 
