--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -83,7 +83,7 @@ murder_rate <- murders$total/murders$population*100000
 # Store the murder_rate < 1 in low 
 low <- murder_rate < 1
 
-# Get the indeces of entries that are below 1
+# Get the indices of entries that are below 1
 
 ```
 
@@ -95,7 +95,7 @@ murder_rate <- murders$total/murders$population*100000
 # Store the murder_rate < 1 in low 
 low <- murder_rate < 1
 
-# Get the indeces of entries that are below 1
+# Get the indices of entries that are below 1
 which(low)
 
 ```
@@ -497,7 +497,7 @@ key: 693e3e8928
 ```
 This is the end of the programming assignment for this section. 
 
-You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/79c873ff79ea4680a67d98b169d2f2fc/8028545a22f34fd5b83aa5b16d2a02ce/?child=first'>course</a>.
 
 If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
 
