--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -216,7 +216,7 @@ skills: 1
 
 `@instructions`
 We will learn to subset using several special operators.
-Use the `[` and `:` operators to access the temperature of the first three cities in the list, which are already stored in `temp`.
+- Use the `[` and `:` operators to access the temperature of the first three cities in the list, which are already stored in `temp`.
 
 `@hint`
 Square brackets (`[`) and `:` are the important bits in this.
@@ -256,7 +256,8 @@ temp[1:3]
 ```{r}
 test_error()
 test_output_contains("temp[1:3]", incorrect_msg = "The square brackets and colon operators are essential to this command.")
-success_msg("Awesome! You've learnt how to make your work easier.")
+test_student_typed(c("temp[1:3]", "temp[c(1,2,3)]", "temp[seq(1,3)]"), not_typed_msg = "Remember to use the brackets `[` and `]`. And inside the brackets you should have a vector with entries 1, 2 and 3 which you can generate with `:`, `c` or `seq`")
+success_msg("Awesome! You've learnt how to make your work easier. But make sure to keep it simple. ")
 ```
 
 ---
@@ -400,6 +401,7 @@ length(x)
 test_error()
 test_object("x", undefined_msg = "Make sure to define `x`!", incorrect_msg = "Have you correctly assigned 12:73 to `x`?")
 test_function("length",index=2,not_called_msg="Make sure to call length on x and don't delete the sample code")
+test_output_contains("length(x)", incorrect_msg = "Make sure you are returning the correct length.")
 success_msg("Good job! Let's move to the next question!")
 ```
 
@@ -421,8 +423,7 @@ skills: 1
 
 `@instructions`
 We will learn how to use the `seq()` function in this question.
-Create a vector containing all the positive odd numbers smaller than 100.
-
+- Create a vector containing all the positive odd numbers smaller than 100. The numbers should be in ascendint order.
 `@hint`
 If you start at 1 and jump by 2, you`ll get the positive odd numbers. 
 
@@ -433,10 +434,11 @@ If you start at 1 and jump by 2, you`ll get the positive odd numbers.
 
 `@sample_code`
 ```{r}
-# Create a vector with the multiples of 7, smaller than 50. 
+# Create a vector with the multiples of 7, smaller than 50.
 seq(7, 49, 7) 
 
 # Create a vector containing all the positive odd numbers smaller than 100.
+# The numbers should be in ascending order
 
 ```
 
@@ -446,6 +448,7 @@ seq(7, 49, 7)
 seq(7, 49, 7) 
 
 # Create a vector containing all the positive odd numbers smaller than 100.
+# The numbers should be in ascending order
 seq(1, 100, 2)
 
 ```
@@ -667,6 +670,7 @@ class(a)
 test_error()
 test_object("a", undefined_msg = "Make sure you store the sequence in object `a`.", incorrect_msg = "There's something wrong with the sequence.")
 test_function("class")
+test_output_contains("class(a)", incorrect_msg = "Make sure you call the `class` function on the correct object.")
 success_msg("Good job! Let's move on to the next exercise!")
 ```
 
