--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -749,10 +749,11 @@ skills: 1
 - Define the following vector:
 
 ```{r}
-x <- c("1", "3", "5")
+x <- c(1, 3, 5,"a")
 ```
 
-- Coerce `x` to get integers using the `as.integer()` function.
+- Notice that `x` has been coerved into a character string.
+- Convert `x` to a vector of integers using the `as.integer()` function.
 
 `@hint`
 Make sure you put the numbers within "". 
@@ -767,16 +768,16 @@ Make sure you put the numbers within "".
 # Define the vector x
 
 
-# Coerce it to get an integer 
+# Typecast the vector to get an integer vector
 
 ```
 
 `@solution`
 ```{r}
 # Define the vector x
-x <- c("1", "3", "5")
+x <- c(1, 3, 5,"a")
 
-# Coerce it to get an integer 
+# Typecast the vector to get an integer vector
 as.integer(x)
 
 ```
