--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -118,7 +118,7 @@ rank(-x)
 # Defining rate
 rate <-  murders$total/ murders$population * 100000
 
-# Redefine mutate to include a column named rank
+# Redefine murders to include a column named rank
 # with the ranks of rate from highest to lowest
 
 ```
@@ -132,7 +132,7 @@ rank(-x)
 # Defining rate
 rate <-  murders$total/ murders$population * 100000
 
-# Redefine mutate to include a column named rank
+# Redefine murders to include a column named rank
 # with the ranks of rate from highest to lowest
 murders <- mutate(murders, rank = rank(-rate))
 ```
