--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -310,10 +310,10 @@ city_temps <- data.frame(name = city, temperature = temp)
 # Define a variable states to be the state names 
 
 
-# Define a variable ranks to determine the population size ranks 
+# Define a variable `ranks` to determine the population size ranks 
 
 
-# Create a data frame my_df with the state name and its rank
+# Create a data frame `my_df` with the state name and its rank
 
 ```
 
@@ -331,10 +331,10 @@ city_temps <- data.frame(name = city, temperature = temp)
 # Define a variable states to be the state names from the murders data frame
 states <- murders$state
 
-# Define a variable ranks to determine the population size ranks 
+# Define a variable `ranks` to determine the population size ranks 
 ranks <- rank(murders$population)
 
-# Create a data frame my_df with the state name and its rank
+# Create a data frame `my_df` with the state name and its rank
 my_df <- data.frame(states = states, ranks = ranks)
 ```
 
@@ -388,13 +388,13 @@ data(murders)
 # Define a variable states to be the state names from the murders data frame
 
 
-# Define a variable ranks to determine the population size ranks 
+# Define a variable `ranks` to determine the population size ranks 
 
 
 # Define a variable ind to store the indexes needed to order the population values
 
 
-# Create a data frame my_df with the state name and its rank and ordered from least populous to most 
+# Create a data frame my_d with the state name and its rank and ordered from least populous to most 
 
 ```
 
@@ -403,13 +403,13 @@ data(murders)
 # Define a variable states to be the state names from the murders data frame
 states <- murders$state
 
-# Define a variable ranks to determine the population size ranks 
+# Define a variable `ranks` to determine the population size ranks 
 ranks <- rank(murders$population)
 
-# Define a variable ind to store the indexes needed to order the population values
+# Define a variable `ind` to store the indexes needed to order the population values
 ind <- order(murders$population)
 
-# Create a data frame my_df with the state name and its rank and ordered from least populous to most 
+# Create a data frame `my_df` with the state name and its rank and ordered from least populous to most 
 my_df <- data.frame(states = states[ind], ranks = ranks[ind])
 
 ```
