--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -18,7 +18,7 @@ You can add columns using the `dplyr` function `mutate`. This function is aware 
 murders <- mutate(murders, population_in_millions = population / 10^6)
 ```
 
-Note that we car write `population` rather than `murders$population`. The function `mutate` knows we are grabing columns from `murders`.
+Note that we can write `population` rather than `murders$population`. The function `mutate` knows we are grabing columns from `murders`.
 
 ```yaml
 type: NormalExercise
