--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -603,7 +603,7 @@ This is the end of the programming assignment for this section.
 
 You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/2a638f36b59f4897b1bd6867ad58f63e/ca59fd4193f943f7b6c653a3b3bda450/?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40sequential%2Bblock%40ca59fd4193f943f7b6c653a3b3bda450'>course</a>.
 
-If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
+If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K. WARNING: if you continue the assessments by clicking on the arrow to get the next exercise or by hitting Ctrl-K your assessments may NOT get scored.
 
 `@instructions`
 - Awesome
