--- a/chapter8.Rmd
+++ b/chapter8.Rmd
@@ -208,7 +208,7 @@ This is the end of the programming assignment for this section.
 
 You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/79c873ff79ea4680a67d98b169d2f2fc/21a56d47549740af97c3ef1ee0f868a6/2?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40vertical%2Bblock%40f9b9325c9f1f4f93b6bc8f557d8b0762'>course</a>.
 
-If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
+If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K. WARNING: if you continue the assessments by clicking on the arrow to get the next exercise or by hitting Ctrl-K your assessments may NOT get scored.
 
 
 `@instructions`
