--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -187,7 +187,7 @@ Now, if you instead try to access a columns with just one bracket
 ```{r}
 murders["population"]
 ```
-R returns a subset of the original data frame containing just this column. This new ojbect will be of class `data.frame` rather than a vector. To access the column itself you need to use either the `$` accessor or the double square brackets `[[`. 
+R returns a subset of the original data frame containing just this column. This new object will be of class `data.frame` rather than a vector. To access the column itself you need to use either the `$` accessor or the double square brackets `[[`. 
 
 This is an examaple of how R can be a bit idiosyncratic sometimes. It is very common to find it confusing at first.
 
