--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -787,15 +787,14 @@ x
 
 # Typecast the vector to get an integer vector
 # You will get a warning but that is ok
-as.numeric(x)
+x = as.numeric(x)
 
 ```
 
 `@sct`
 ```{r}
 test_error()
-test_object("x", undefined_msg = "Make sure to define x first.", incorrect_msg = "Check the values stored in `x`.")
-test_output_contains("as.numeric(x)", incorrect_msg = "Check the code again.")
+test_object("x", undefined_msg = "Make sure to define x first.", incorrect_msg = "Assign the vector back to itself in `x`.")
 test_function("as.numeric")
 success_msg("Awesome! Doesn't that feel wonderful? Now, you can try changing it back to character, using the code `as.character(x)`.")
 ```
