--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -368,6 +368,7 @@ skills: 1
 - Create variables `states` and `ranks` to store the state names and ranks by population size respectively.
 - Create an object `ind` that stores the indexes needed to order the population values, using the `order` command. For example we could define `o <- order(murders$population)`
 - Create a data frame with both variables following the correct order. Use the bracket operator `[` to re-order each column in the data frame. For example, `states[o]` orders the abbreviations based by population size. 
+- The columns of the data frame must be in the specific order: state, rate, rank.
 
 `@hint`
 
